# Quantauri_old

./: .gitignore  Cargo.toml  README.md  pq_plot.py  pyproject.toml
data/: KB.parquet  KB_alpha.parquet
data/000270/: alpha.parquet  close.parquet
data/005070/: alpha.parquet  close.parquet
data/005380/: alpha.parquet  close.parquet
data/005490/: alpha.parquet  close.parquet
data/005930/: alpha.parquet  close.parquet
data/008770/: alpha.parquet  close.parquet
data/035720/: alpha.parquet  close.parquet
data/051910/: alpha.parquet  close.parquet
data/066970/: alpha.parquet  close.parquet
data/068270/: alpha.parquet  close.parquet
data/086520/: alpha.parquet  close.parquet
data/096770/: alpha.parquet  close.parquet
data/097950/: alpha.parquet  close.parquet
data/105560/: alpha.parquet  close.parquet
data/121600/: alpha.parquet  close.parquet
data/139480/: alpha.parquet  close.parquet
data/247540/: alpha.parquet  close.parquet
data/294630/: alpha.parquet  close.parquet
data/372170/: alpha.parquet  close.parquet
data/373220/: alpha.parquet  close.parquet
data/AMD/: alpha.parquet  close.parquet
data/CPNG/: alpha.parquet  close.parquet
data/IBM/: alpha.parquet  close.parquet
data/IONQ/: alpha.parquet  close.parquet
data/TSLA/: alpha.parquet  close.parquet
script/: observe.py  plot.py
src/: main.rs
