[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "finance-datareader>=0.9.50",
    "pyarrow>=12.0.1",
    "pandas>=2.0.3",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "notebook>=7.0.2",
    "pylint>=2.17.5",
    "yfinance>=0.2.27",
    "jupyter>=1.0.0",
    "pandas-datareader>=0.10.0",
    "scienceplots>=2.1.0",
    "argparse>=1.4.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

